# vulkayes-core

./: .rustfmt.toml  Cargo.toml  notes.md  rustfmt.toml
documentation/: object_lifetime.puml
src/: lib.rs  prelude.rs
src/command/: buffer.rs  error.rs  pool.rs
src/command/buffer/: clear.rs  clear_commands.rs  control.rs  mod.rs  recording.rs  render_pass.rs
src/command/buffer/recording/: common.rs  coverage.md  inside_render_pass.rs  mod.rs
src/command/buffer/recording/common/: bind.rs  mod.rs  set.rs
src/command/buffer/recording/inside/: draw.rs  mod.rs
src/command/buffer/recording/outside/: barrier.rs  copy.rs  mod.rs
src/descriptor/: error.rs  mod.rs  pool.rs
src/descriptor/layout/: mod.rs  params.rs
src/descriptor/sampler/: mod.rs  params.rs
src/descriptor/set/: error.rs  mod.rs  update.rs
src/device/: error.rs  mod.rs  test.rs
src/entry/: enumerate.rs  mod.rs  test.rs
src/framebuffer/: error.rs  mod.rs
src/instance/: debug.rs  error.rs  mod.rs  test.rs
src/macros/: mod.rs
src/memory/device/: allocator.rs  map.rs  mapped.rs  mod.rs  naive.rs  never.rs  simple_allocator.rs
src/memory/host/: mod.rs  rust.rs
src/physical_device/: enumerate.rs  mod.rs  test.rs
src/pipeline/: compute.rs  error.rs  graphics.rs  layout.rs  mod.rs  params.rs
src/queue/: error.rs  macros.rs  mod.rs  sharing_mode.rs
src/render_pass/: description.rs  error.rs  mod.rs  params.rs
src/resource/: image.rs  mod.rs
src/resource/buffer/: buffer.rs  error.rs  mod.rs  params.rs  view.rs
src/resource/image/: error.rs  image.rs  layout.rs  mod.rs  params.rs  size.rs  view.rs
src/shader/: error.rs  mod.rs  params.rs
src/surface/: error.rs  mod.rs
src/swapchain/: error.rs  image.rs  mod.rs
src/sync/: mod.rs
src/sync/fence/: error.rs  mod.rs
src/sync/semaphore/: error.rs  mod.rs
src/util/: fmt.rs  handle.rs  hash.rs  macros.rs  mod.rs  string.rs  sync.rs  transparent.rs  validations.rs
