[package]
name = "vulkayes-core"
version = "0.1.0"
authors = ["TheEdward162 <TheEdward162@gmail.com>"]
edition = "2018"

[features]
default = ["runtime_implicit_validations", "vulkan1_2", "naive_device_allocator", "log_release_max_level_off"]

# enables rust host memory allocator option
rust_host_allocator = []
# enables very simple device memory allocator
naive_device_allocator = []

# replaces use of Arc<T> and Mutex<T> with Rc<T> and RefCell<T>
single_thread = []
# use cryptographically secure HashMap and HashSet instead of performance-oriented non-secure one
crypto_secure_hash = []
# Validate implicit validations according to the Vulkan spec at runtime if they can't be validated statically
runtime_implicit_validations = []

vulkan1_1 = []
vulkan1_2 = ["vulkan1_1"]

## Uses `crate_render_pass2` from Vulkan 1.2 (requires Vulkan version of 1.2)
#render_pass_2 = []
## Adds a fallback that dynamically detects Vulkan version and falls back to 1.0 `create_render_pass` if needed
#render_pass_2_fallback = ["render_pass_2"]

log_release_max_level_off = ["log/release_max_level_off"]
log_release_max_level_error = ["log/release_max_level_error"]
log_release_max_level_warn = ["log/release_max_level_warn"]
log_release_max_level_info = ["log/release_max_level_info"]
log_release_max_level_debug = ["log/release_max_level_debug"]
log_release_max_level_trace = ["log/release_max_level_trace"]

log_max_level_off = ["log/max_level_off"]
log_max_level_error = ["log/max_level_error"]
log_max_level_warn = ["log/max_level_warn"]
log_max_level_info = ["log/max_level_info"]
log_max_level_debug = ["log/max_level_debug"]
log_max_level_trace = ["log/max_level_trace"]

[dependencies]
# core
# A forked git repository is used during development
ash = { git = "https://github.com/vulkayes/ash" }

# utility
arrayvec = "0.5"
seq-macro = { git = "https://github.com/ametisf/seq-macro/" }

# performance
rustc-hash = "1"

# debuging
log = "0.4"
thiserror = "1"

[dev-dependencies]
edwardium_logger = "1"
