[package]
name = "vulkayes-core"
version = "0.1.0"
authors = ["TheEdward162 <TheEdward162@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = [
    "vulkan1_2",
    # "runtime_implicit_validations",
    "naive_device_allocator",
    "log_release_max_level_off",
    # "rust_host_allocator",
    # "multi_thread",
    # "insecure_hash"
]

# enables host allocator Custom variant, making it a sized type
host_allocator = []
# enables rust host memory allocator option
rust_host_allocator = ["host_allocator"]
# enables very simple device memory allocator
naive_device_allocator = []

# enable multi thread support by using Arc<T> and Mutex<T> instead of Rc<T> and RefCell<T>
multi_thread = []
# use synchronization primitived from the parking_lot crate instead of the stdlib
#parking_lot_vutex = ["parking_lot", "multi_thread"] TODO: Fix Mutex.lock() not returning a result

# use cryptographically insecure HashMap and HashSet for better peformance
insecure_hash = ["rustc-hash"]

# Validate implicit validations according to the Vulkan spec at runtime if they can't be validated statically
runtime_implicit_validations = []

vulkan1_1 = []
vulkan1_2 = ["vulkan1_1"]

log_release_max_level_off = ["log/release_max_level_off"]
log_release_max_level_error = ["log/release_max_level_error"]
log_release_max_level_warn = ["log/release_max_level_warn"]
log_release_max_level_info = ["log/release_max_level_info"]
log_release_max_level_debug = ["log/release_max_level_debug"]
log_release_max_level_trace = ["log/release_max_level_trace"]

log_max_level_off = ["log/max_level_off"]
log_max_level_error = ["log/max_level_error"]
log_max_level_warn = ["log/max_level_warn"]
log_max_level_info = ["log/max_level_info"]
log_max_level_debug = ["log/max_level_debug"]
log_max_level_trace = ["log/max_level_trace"]

[dependencies]
# core
# A forked git repository is used during development
# ash = { git = "https://github.com/vulkayes/ash" }
ash = "0.31"

# utility
arrayvec = "0.5"
seq-macro = { git = "https://github.com/ametisf/seq-macro/" }

# performance
rustc-hash = { version = "1", optional = true }
parking_lot = { version = "0.11", optional = true }

# debuging
log = "0.4"
thiserror = "1"

[dev-dependencies]
edwardium_logger = "1.1"
