[package]
name = "vulkayes-core"
version = "0.1.0"
authors = ["TheEdward162 <TheEdward162@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "More positive Vulkan abstraction."

[features]
default = [
    "vulkan1_2",
    "naive_device_allocator"
]

# enables host allocator Custom variant, making it a sized type
host_allocator = []
# enables rust host memory allocator option
rust_host_allocator = ["host_allocator"]
# enables very simple device memory allocator
naive_device_allocator = []

# enable multi thread support by using Arc<T> and Mutex<T> instead of Rc<T> and RefCell<T>
multi_thread = []
# use synchronization primitived from the parking_lot crate instead of the stdlib
#parking_lot_vutex = ["parking_lot", "multi_thread"] TODO: Fix Mutex.lock() not returning a result

# use cryptographically insecure HashMap and HashSet for better peformance
insecure_hash = ["rustc-hash"]

# Validate implicit validations according to the Vulkan spec at runtime if they can't be validated statically
runtime_implicit_validations = []

vulkan1_1 = []
vulkan1_2 = ["vulkan1_1"]

[dependencies]
# core
ash = "0.36"

# utility
arrayvec = "0.7"

# performance
rustc-hash = { version = "1", optional = true }
parking_lot = { version = "0.12", optional = true }

# debuging
log = "0.4"
thiserror = "1"

[dev-dependencies]
edwardium_logger = "1.2.2"
